<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings_name">Настройки</string>
    <string name="button_search">Поиск</string>
    <string name="button_media">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="thema_letters_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_letters_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="error_not_found">Ничего не нашлось</string>
    <string name="error_connection">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="сlear_history">Очистить историю</string>
    <string name="country_track">Страна</string>
    <string name="genre_track">Жанр</string>
    <string name="year_track">Год</string>
    <string name="album_track">Альбом</string>
    <string name="duration_track">Длительность</string>
    <string name="check_your_internet_connection">Проверьте подключение к интернету</string>


</resources>
