<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutApp"
    android:background="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            style="@style/ImageButtonArrow"
            android:src="@drawable/arrow" />

        <TextView
            style="@style/TextScreenName"
            android:layout_marginStart="@dimen/frame_28dp"
            android:text="@string/settings_name" />

    </LinearLayout>

    <FrameLayout
        style="@style/MenuItemSettings"
        android:layout_marginTop="@dimen/frame_40dp">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/dark_theme" />

        <androidx.appcompat.widget.SwitchCompat
            style="@style/IconsMenuSettings"
            android:checked="false"
            android:theme="@style/SCBSwitch"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_app"
        style="@style/MenuItemSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/share_app" />

        <ImageView
            style="@style/IconsMenuSettings"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/write_to_support"
        style="@style/MenuItemSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/support" />

        <ImageView
            style="@style/IconsMenuSettings"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/user_agreement"
        style="@style/MenuItemSettings">

        <TextView
            style="@style/TextButtonSettings"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/IconsMenuSettings"
            android:src="@drawable/agreement" />

    </FrameLayout>

</LinearLayout>
