<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/frame_16dp"
    android:paddingTop="@dimen/frame_14dp"
    android:paddingBottom="@dimen/frame_28dp">


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_22" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/frame_40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:insetTop="@dimen/frame_0dp"
            android:insetBottom="@dimen/frame_0dp"
            android:text="@string/button_search"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_text"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/radius_button_16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/frame_10dp"
            app:iconTint="@color/black_text" />

        <Button
            android:id="@+id/button_media"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_0dp"
            android:layout_marginTop="@dimen/frame_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:insetTop="@dimen/frame_0dp"
            android:insetBottom="@dimen/frame_0dp"
            android:text="@string/button_media"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_text"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/radius_button_16dp"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/frame_10dp"
            app:iconTint="@color/black_text" />


        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_0dp"
            android:layout_marginTop="@dimen/frame_16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/yandex_sans_text_medium"
            android:insetTop="@dimen/frame_0dp"
            android:insetBottom="@dimen/frame_0dp"
            android:text="@string/button_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black_text"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/radius_button_16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/frame_10dp"
            app:iconTint="@color/black_text" />

    </LinearLayout>


</LinearLayout>