<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.955" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_4dp"
        android:layout_marginTop="@dimen/frame_20dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPictureArtist"
        android:layout_width="@dimen/frame_0dp"
        android:layout_height="@dimen/frame_0dp"
        android:layout_marginHorizontal="@dimen/frame_8dp"
        android:layout_marginTop="@dimen/frame_46dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/michaeljackaon"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintBottom_toTopOf="@id/tvNameTrack"/>

    <TextView
        android:id="@+id/tvCountry"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_18dp"
        android:layout_marginBottom="@dimen/frame_28dp"
        android:text="@string/country_track"
        app:layout_constraintTop_toBottomOf="@id/tvGenre"
        app:layout_constraintEnd_toStartOf="@id/tvCountryName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tvCountryName"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorSecondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tvCountry"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/tvCountry"
        tools:text="Великобритания" />

    <TextView
        android:id="@+id/tvGenre"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_18dp"
        android:text="@string/genre_track"
        app:layout_constraintTop_toBottomOf="@id/tvYear"
        app:layout_constraintEnd_toStartOf="@id/tvGenreName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <TextView
        android:id="@+id/tvGenreName"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorSecondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tvGenre"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/tvGenre"
        tools:text="Rock" />

    <TextView
        android:id="@+id/tvYear"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_18dp"
        android:text="@string/year_track"
        app:layout_constraintTop_toBottomOf="@id/tvAlbum"
        app:layout_constraintEnd_toStartOf="@id/tvYearName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <TextView
        android:id="@+id/tvYearName"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorSecondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tvYear"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/tvYear"
        tools:text="1965" />

    <TextView
        android:id="@+id/tvAlbum"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_18dp"
        android:text="@string/album_track"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tvDuration"
        app:layout_constraintEnd_toStartOf="@id/tvAlbumName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <TextView
        android:id="@+id/tvAlbumName"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorSecondary"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tvAlbum"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/tvAlbum"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tvDuration"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_30dp"
        android:text="@string/duration_track"
        app:layout_constraintTop_toBottomOf="@id/tvCountdown"
        app:layout_constraintEnd_toStartOf="@id/tvDurationName"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <TextView
        android:id="@+id/tvDurationName"
        style="@style/attributesTrackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:ellipsize="end"
        android:lines="1"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorSecondary"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/tvDuration"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/tvDuration"
        tools:text="5:35" />

    <TextView
        android:id="@+id/tvCountdown"
        style="@style/TextArtistNameAndCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_4dp"
        app:layout_constraintTop_toBottomOf="@id/ivPlayTrack"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        tools:text="0:30" />

    <ImageView
        android:id="@+id/ivTrackAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_8dp"
        android:layout_marginTop="@dimen/frame_54dp"
        android:src="@drawable/track_add_button"
        app:layout_constraintTop_toBottomOf="@id/tvNameArtist"
        app:layout_constraintEnd_toStartOf="@id/ivPlayTrack"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftGuideline" />

    <ImageView
        android:id="@+id/ivPlayTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_30dp"
        android:src="@drawable/play_button"
        app:layout_constraintTop_toBottomOf="@id/tvNameArtist"
        app:layout_constraintEnd_toStartOf="@id/ivTrackLike"
        app:layout_constraintStart_toEndOf="@id/ivTrackAdd" />

    <ImageView
        android:id="@+id/ivTrackLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/frame_8dp"
        android:layout_marginTop="@dimen/frame_54dp"
        android:src="@drawable/track_like_button"
        app:layout_constraintTop_toBottomOf="@id/tvNameArtist"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintStart_toEndOf="@id/ivPlayTrack" />

    <TextView
        android:id="@+id/tvNameArtist"
        style="@style/TextArtistNameAndCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvNameTrack"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constrainedWidth="true"
        tools:text="The Beatles"
        android:layout_marginTop="@dimen/frame_12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginHorizontal="@dimen/frame_8dp"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/tvNameTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_24dp"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintEnd_toStartOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/ivPictureArtist"
        app:layout_constrainedWidth="true"
        tools:text="Yesterday (Remastered 2009)"
        android:layout_marginBottom="@dimen/frame_12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginHorizontal="@dimen/frame_8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:fontFamily="@font/yandex_sans_text_medium"
        android:textSize="@dimen/text_22sp"
        android:textColor="?attr/colorSecondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>